--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -52,7 +52,8 @@ if(NOT WIN32)
 include(../cmake/lib/gtest.cmake)
 include(../cmake/lib/benchmark.cmake)
   # Add tests
-  add_test_fn(multi_array_test)
+  add_test_fn(multi_array_integer_test)
+  add_test_fn(multi_array_string_test)
   
   # Add bench
   add_bench_fn(multi_array_bench)
