Update readme, functions names, add examples, update makefile
Signed-off-by: Bensuperpc <bensuperpc@gmail.com>

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -20,6 +20,8 @@ function(add_example NAME)
   add_dependencies(run-examples "run_${NAME}")
 endfunction()
 
-add_example(empty_example)
+add_example(basic_2D_example)
+add_example(basic_3D_example)
+add_example(basic_128D_example)
 
 add_folders(Example)
