--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -61,8 +61,8 @@ include(../cmake/lib/benchmark.cmake)
   add_test_fn(rtree_test)
   
   # Add bench
-  #add_bench_fn(vector_random_bench)
-  #add_bench_fn(multi_array_bench)
+  add_bench_fn(vector_random_bench)
+  add_bench_fn(multi_array_bench)
 endif()
 
 
